examples/test/testpolicy14039.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14039
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key22: value16
      key14: value31
      key18: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value23
          key30: value14
          key47: value9
      podSelector:
        matchLabels:
          key8: value28
